fixed nav on tablet view

--- a/css/styles.css
+++ b/css/styles.css
@@ -143,6 +143,7 @@ nav {
     background-color: aquamarine;
     margin: 10px;
     border-radius: 3px;
+    padding: 10px;
 }
 
 h1 {
@@ -248,7 +249,7 @@ address {
 
     .portfolio {
         text-align: center;
-        margin: 5px;
+        margin: 10px;
         padding-top: 30px;
         padding-bottom: 40px;
         background-color: white;
@@ -268,7 +269,6 @@ address {
         font-weight: 100;
         border-top: 3px;
         border-color: black;
-        margin-bottom: -10;
     }
 
     address {
@@ -294,30 +294,34 @@ address {
     }
 
     .intro-section p {
+        padding-top: 50px;
         flex-wrap: wrap;
+
     }
 
-    .nav {
+    img.intro {
+        margin: 0;
         width: 100%;
+    }
 
+    nav {
+        margin: auto;
+        background-color: white;
+        width: fit-content
     }
 
     nav ul {
-        margin: auto;
-        text-align: center;
-        text-decoration: none;
+        display: flex;
+        margin: 0px;
     }
 
     nav li a {
-        display: inline-block;
         list-style-type: none;
-        background-color: gainsboro;
         font-weight: bold;
         overflow: hidden;
-        margin: auto;
-        padding: 20px;
         color: black;
         text-decoration: none;
+
     }
 
 
@@ -327,6 +331,10 @@ address {
 
     .portfolio {
         background-color: white;
+    }
+
+    .skills {
+        margin: 10px;
     }
 
     .contact {
